# normandy-edi

./: .gitignore  .therapist.yml  README.md  pyproject.toml  setup.cfg  setup.py
edi/: api.py  cache.py  cli.py  jexlutils.py  log.py
requirements/: constraints.txt  main.txt
